opam-version: "2.0"
name: "weaver"
version: "0.1"
maintainer: "Florian Angeletti<octa@polychoron.fr>"
authors: "Florian Angeletti <octa@polychoron.fr>"
bug-reports: "angeletti@achronie.fr"
homepage: "perso.quaesituri.org/florian.angeletti"
license: "GPL"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: ["dune""js_of_ocaml"]
synopsis:"A presentation library"
