opam-version: "2.0"
name: "weaver"
version: "0.1"
maintainer: "Florian Angeletti<octa@polychoron.fr>"
authors: "Florian Angeletti <octa@polychoron.fr>"
bug-reports: "angeletti@achronie.fr"
homepage: "perso.quaesituri.org/florian.angeletti"
license: "GPL"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: ["dune""js_of_ocaml"]
synopsis:"An ocaml library for html5 based presentation"
descr:"Weaver is a library for writing html presentation using js_of_ocaml
+ CSS + html5."
